--- a/css/styles.css
+++ b/css/styles.css
@@ -183,4 +183,14 @@ footer > h1 {
 .max-width {
     margin: 0 auto;
     max-width:960px;
+    margin: 0 auto;
+}
+
+/*Bootstrap Related*/
+.container-fluid{
+    padding: 0;
+}
+#favorite-sites > .row > .col-md-4 > img {
+    margin:0 auto;
+    max-width:200px;
 }
